# Pentagone

./: README.md
score-addon-shapes/: CMakeLists.txt  score_addon_shapes.cpp  score_addon_shapes.hpp
score-addon-shapes/shapes/: ChangeShape.hpp  CommandFactory.hpp  ShapeExecution.hpp  ShapeModel.cpp  ShapeModel.hpp  ShapePresenter.cpp  ShapePresenter.hpp  ShapeView.cpp  ShapeView.hpp
score-addon-shapes/shapes/Circle/: CircleMetadata.hpp  CircleModel.cpp  CircleModel.hpp  CirclePresenter.cpp  CirclePresenter.hpp  CircleView.cpp  CircleView.hpp
score-addon-shapes/shapes/Heart/: HeartExecution.hpp  HeartMetadata.hpp  HeartModel.cpp  HeartModel.hpp  HeartPresenter.cpp  HeartPresenter.hpp  HeartView.cpp  HeartView.hpp
score-addon-shapes/shapes/Hexagon/: HexagonExecution.cpp  HexagonExecution.hpp  HexagonMetadata.hpp  HexagonModel.cpp  HexagonModel.hpp  HexagonPresenter.cpp  HexagonPresenter.hpp  HexagonView.cpp  HexagonView.hpp
score-addon-shapes/shapes/Infinite/: InfiniteExecution.cpp  InfiniteExecution.hpp  InfiniteMetadata.hpp  InfiniteModel.cpp  InfiniteModel.hpp  InfinitePresenter.cpp  InfinitePresenter.hpp  InfiniteView.cpp  InfiniteView.hpp
score-addon-shapes/shapes/Pentagone/: PentagoneExecution.hpp  PentagoneMetadata.hpp  PentagoneModel.cpp  PentagoneModel.hpp  PentagonePresenter.cpp  PentagonePresenter.hpp  PentagoneView.cpp  PentagoneView.hpp
score-addon-shapes/shapes/Polygon/: PolygonExecution.hpp  PolygonMetadata.hpp  PolygonModel.cpp  PolygonModel.hpp  PolygonPresenter.cpp  PolygonPresenter.hpp  PolygonView.cpp  PolygonView.hpp
score-addon-shapes/shapes/Rectangle/: RectangleExecution.cpp  RectangleExecution.hpp  RectangleMetadata.hpp  RectangleModel.cpp  RectangleModel.hpp  RectanglePresenter.cpp  RectanglePresenter.hpp  RectangleView.cpp  RectangleView.hpp
score-addon-shapes/shapes/Square/: SquareExecution.hpp  SquareMetadata.hpp  SquareModel.cpp  SquareModel.hpp  SquarePresenter.cpp  SquarePresenter.hpp  SquareView.cpp  SquareView.hpp
score-addon-shapes/shapes/Triangle/: TriangleExecution.cpp  TriangleExecution.hpp  TriangleMetadata.hpp  TriangleModel.cpp  TriangleModel.hpp  TrianglePresenter.cpp  TrianglePresenter.hpp  TriangleView.cpp  TriangleView.hpp
score-plugin-automation/: CMakeLists.txt  score_plugin_automation.cpp
score-plugin-automation/Automation/: AutomationProcessMetadata.hpp
score-plugin-automation/Automation/Commands/: ChangeAddress.cpp  ChangeAddress.hpp
score-plugin-automation/Automation/Inspector/: AutomationInspectorFactory.hpp  AutomationInspectorWidget.cpp  AutomationInspectorWidget.hpp
score-plugin-automation/Circle/: CircleExecution.cpp  CircleExecution.hpp  CircleMetadata.hpp  CircleModel.cpp  CircleModel.hpp  CirclePresenter.cpp  CirclePresenter.hpp  CircleView.cpp  CircleView.hpp
score-plugin-automation/Heart/: HeartExecution.cpp  HeartExecution.hpp  HeartMetadata.hpp  HeartModel.cpp  HeartModel.hpp  HeartPresenter.cpp  HeartPresenter.hpp  HeartView.cpp  HeartView.hpp
score-plugin-automation/Hexagon/: HexagonExecution.hpp  HexagonMetadata.hpp  HexagonModel.cpp  HexagonModel.hpp  HexagonPresenter.cpp  HexagonPresenter.hpp  HexagonView.cpp  HexagonView.hpp
score-plugin-automation/Infinite/: InfiniteExecution.hpp  InfiniteMetadata.hpp  InfiniteModel.cpp  InfiniteModel.hpp  InfinitePresenter.cpp  InfinitePresenter.hpp  InfiniteView.cpp  InfiniteView.hpp
score-plugin-automation/Pentagone/: PentagoneExecution.cpp  PentagoneExecution.hpp  PentagoneMetadata.hpp  PentagoneModel.cpp  PentagoneModel.hpp  PentagonePresenter.cpp  PentagonePresenter.hpp  PentagoneView.cpp  PentagoneView.hpp  SplineView.cpp
score-plugin-automation/Polygon/: PolygonExecution.cpp  PolygonExecution.hpp  PolygonMetadata.hpp  PolygonModel.cpp  PolygonModel.hpp  PolygonPresenter.cpp  PolygonPresenter.hpp  PolygonView.cpp  PolygonView.hpp
score-plugin-automation/Rectangle/: RectangleExecution.hpp  RectangleMetadata.hpp  RectangleModel.cpp  RectangleModel.hpp  RectanglePresenter.cpp  RectanglePresenter.hpp  RectangleView.cpp  RectangleView.hpp
score-plugin-automation/Spline/: SplineExecution.hpp  SplineMetadata.hpp  SplineModel.cpp  SplineModel.hpp  SplinePresenter.hpp  SplineView.cpp  SplineView.hpp
score-plugin-automation/Square/: SquareExecution.cpp  SquareExecution.hpp  SquareMetadata.hpp  SquareModel.cpp  SquareModel.hpp  SquarePresenter.cpp  SquarePresenter.hpp  SquareView.cpp  SquareView.hpp
score-plugin-automation/Triangle/: TriangleExecution.cpp  TriangleExecution.hpp  TriangleMetadata.hpp  TriangleModel.cpp  TriangleModel.hpp  TrianglePresenter.cpp  TrianglePresenter.hpp  TriangleView.cpp  TriangleView.hpp
